--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@ img {
 }
 
 body {
-  background-image: URL("");
+  background-image: URL("https://cdn.discordapp.com/attachments/731300011392106586/746261090152742912/image0.png");
 }
 
 .copy-container h1 {
