--- a/styles/common.css
+++ b/styles/common.css
@@ -1,4 +1,5 @@
 body {
+  background-image: URL('https://cdn.discordapp.com/attachments/731300011392106586/746261090152742912/image0.png');
   font-family: "Lucida Grande";
   min-height: 100vh;
   position: relative;
